--- a/index.html
+++ b/index.html
@@ -5,29 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      rel="stylesheet"
+    />
     <title>Landing Page</title>
   </head>
   <body>
-    <div>
-      <header>
-        <h3>Zero Metal Noctua</h3>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Login</a></li>
-        </ul>
-      </header>
-    </div>
-    <div id="home">
-      <div id="home-left">
-        <h1>Welcome to the Dark</h1>
-        <p>
-          Metal Noctua is the only place online where you can find quality
-          content, with no clue as to what the content actually does
-        </p>
-        <button>Sign Up</button>
-        <div id="home-right">
-          <img src="" alt="" srcset="" />
+    <div id="hero">
+      <div>
+        <header>
+          <h3>Zero Metal Noctua</h3>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Login</a></li>
+          </ul>
+        </header>
+      </div>
+      <div id="home">
+        <div id="home-left">
+          <h1>Welcome to the Dark</h1>
+          <p>
+            Metal Noctua is the only place online where you can find quality
+            content, with no clue as to what the content actually does
+          </p>
+          <button>Sign Up</button>
+          <div id="home-right">
+            <img src="/assets/zero.jpg" style="width: 450px; height: auto" />
+          </div>
         </div>
       </div>
     </div>
