Completed styling hero.

--- a/index.html
+++ b/index.html
@@ -27,15 +27,19 @@
       </div>
       <div id="home">
         <div id="home-left">
-          <h1>Welcome to the Dark</h1>
-          <p>
-            Metal Noctua is the only place online where you can find quality
-            content, with no clue as to what the content actually does
+          <h1 class="hero-main-text">Welcome to the Dark</h1>
+          <p class="hero-secondary-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br />
+            Autem id reprehenderit cumque ratione voluptatibus. <br />
+            Magnam quis quaerat rem nesciunt culpa numquam atque saepe amet
+            ipsum.
           </p>
-          <button>Sign Up</button>
-          <div id="home-right">
-            <img src="/assets/zero.jpg" style="width: 450px; height: auto" />
+          <div class="sign-up-button">
+            <button>Sign Up</button>
           </div>
+        </div>
+        <div id="home-right">
+          <img src="/assets/zero.jpg" style="width: 625px; height: 300px" />
         </div>
       </div>
     </div>
