Added Image section Elements

--- a/index.html
+++ b/index.html
@@ -43,5 +43,28 @@
         </div>
       </div>
     </div>
+    <div id="images-section">
+      <div id="images-section-header">
+        <h1 id="image-header">Some Random Information</h1>
+      </div>
+      <div id="images-section-images">
+        <figure style="display: inline-table">
+          <img src="" alt="" style="width: 200px; height: 200px" />
+          <figcaption>This is some subtext under a picture</figcaption>
+        </figure>
+        <figure style="display: inline-table">
+          <img src="" alt="" style="width: 200px; height: 200px" />
+          <figcaption>This is some subtext under a picture</figcaption>
+        </figure>
+        <figure style="display: inline-table">
+          <img src="" alt="" style="width: 200px; height: 200px" />
+          <figcaption>This is some subtext under a picture</figcaption>
+        </figure>
+        <figure style="display: inline-table">
+          <img src="" alt="" style="width: 200px; height: 200px" />
+          <figcaption>This is some subtext under a picture</figcaption>
+        </figure>
+      </div>
+    </div>
   </body>
 </html>
