added images to image section and text formatting

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
     <title>Landing Page</title>
@@ -35,7 +35,7 @@
             ipsum.
           </p>
           <div class="sign-up-button">
-            <button>Sign Up</button>
+            <button><a href=""> Sign Up</a></button>
           </div>
         </div>
         <div id="home-right">
@@ -49,19 +49,35 @@
       </div>
       <div id="images-section-images">
         <figure style="display: inline-table">
-          <img src="" alt="" style="width: 200px; height: 200px" />
+          <img
+            src="assets/metal1.jpg"
+            alt=""
+            style="width: 200px; height: 200px"
+          />
           <figcaption>This is some subtext under a picture</figcaption>
         </figure>
         <figure style="display: inline-table">
-          <img src="" alt="" style="width: 200px; height: 200px" />
+          <img
+            src="assets/metal2.jpg"
+            alt=""
+            style="width: 200px; height: 200px"
+          />
           <figcaption>This is some subtext under a picture</figcaption>
         </figure>
         <figure style="display: inline-table">
-          <img src="" alt="" style="width: 200px; height: 200px" />
+          <img
+            src="assets/metal3.jpg"
+            alt=""
+            style="width: 200px; height: 200px"
+          />
           <figcaption>This is some subtext under a picture</figcaption>
         </figure>
         <figure style="display: inline-table">
-          <img src="" alt="" style="width: 200px; height: 200px" />
+          <img
+            src="assets/metal4.jpg"
+            alt=""
+            style="width: 200px; height: 200px"
+          />
           <figcaption>This is some subtext under a picture</figcaption>
         </figure>
       </div>
