added testimonial section

--- a/index.html
+++ b/index.html
@@ -82,5 +82,24 @@
         </figure>
       </div>
     </div>
+    <div id="testimonial-section">
+      <div class="testimonial">
+        <blockquote>
+          <q>
+            I can't remember the last time I was happy. <br />
+            Perhaps it was just the other day when,<br />
+            on a whim, I decided to go grab an ice cream.<br />
+            It was such a random decision, yet I derided much joy<br />
+            from that endevour. Perhaps I can remember when last I was happy;<br />
+            It was when I had ice cream.
+          </q>
+        </blockquote>
+        <div class="citation">
+          <cite style="font-weight: bolder; font-size: 25px">
+            - Zero Metal Noctua
+          </cite>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
