--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             ipsum.
           </p>
           <div class="sign-up-button">
-            <button><a href=""> Sign Up</a></button>
+            <button id="sign-up-button"><a href=""> Sign Up</a></button>
           </div>
         </div>
         <div id="home-right">
@@ -100,6 +100,24 @@
           </cite>
         </div>
       </div>
+    </div>
+    <div id="call-to-action">
+      <div id="call-to-action-box">
+        <div id="call-to-action-text">
+          <h2>Call to action! It's time!</h2>
+          <h4>
+            Sign up for our product by clicking that button right over there!
+          </h4>
+        </div>
+        <div id="call-to-action-button">
+          <button class="cta-button"><a href="">Sign up</a></button>
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+      <footer>
+        <p>Copyright © Zero Metal Noctua</p>
+      </footer>
     </div>
   </body>
 </html>
