--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
     <div id="footer">
       <footer>
-        <p>Copyright © Zero Metal Noctua</p>
+        <p>Copyright © Zero Metal Noctua 2022</p>
       </footer>
     </div>
   </body>
